macro(AddDemo name)
    file(GLOB_RECURSE SRC ./*.hpp ./*.cpp ./*.js ./*.mjs)
    add_executable(${name})
    target_sources(${name} PRIVATE ${SRC})
    target_link_libraries(${name} PRIVATE qjs)
    target_compile_features(${name} PRIVATE cxx_std_17)
    set_target_properties(${name} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endmacro()

add_subdirectory(01-HelloWorld)
add_subdirectory(02-UsingInternalModules)
add_subdirectory(03-BindingGlobalFields)
add_subdirectory(04-BindingGlobalFunctions)