macro(AddDemo name)
    file(GLOB_RECURSE SRC ./*.hpp ./*.cpp ./*.js ./*.mjs)
    add_executable(${name})
    target_sources(${name} PRIVATE ${SRC})
    target_link_libraries(${name} PRIVATE common)
    target_compile_features(${name} PRIVATE cxx_std_17)
    set_target_properties(${name} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endmacro()

add_library(common STATIC common.hpp common.cpp)
target_link_libraries(common PUBLIC qjs)
target_compile_features(common PUBLIC cxx_std_20)
target_include_directories(common PUBLIC .)

add_subdirectory(01-HelloWorld)
add_subdirectory(02-UsingInternalModules)
add_subdirectory(03-BindingGlobalFields)
add_subdirectory(04-BindingGlobalFunctions)
add_subdirectory(05-BindingClass)
add_subdirectory(06-Module)